tests/snapshots/conformance__n_array_double_comma.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1,,2]
stdout --- 
<empty>
stderr --- 
error: expected json value, found `,`
 --> stdin:1:4
  |
1 | [1,,2]
  |   -^
  |   |
  |   expected due to `,`
