tests/snapshots/conformance__n_array_inner_array_no_comma.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[3[4]]
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `]`, found `[`
 --> stdin:1:3
  |
1 | [3[4]]
  | - ^
  | |
  | expected due to `[`
