tests/snapshots/conformance__n_array_invalid_utf8.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
<raw bytes>
[91, 255, 93]
stdout --- 
<empty>
stderr --- 
error: source did not contain valid utf8
 --> stdin
  |
