tests/snapshots/conformance__n_array_missing_value.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[   , ""]
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `]`, found `,`
 --> stdin:1:5
  |
1 | [   , ""]
  | -   ^
  | |
  | expected due to `[`
