tests/snapshots/conformance__n_array_number_and_comma.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1,]
stdout --- 
<empty>
stderr --- 
error: expected json value, found `]`
 --> stdin:1:4
  |
1 | [1,]
  |   -^
  |   |
  |   expected due to `,`
  |
help: consider removing the trailing comma
  |
1 - [1,]
1 + [1]
  |
