tests/snapshots/conformance__n_array_spaces_vertical_tab_formfeed.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["a"\f]
stdout --- 
<empty>
stderr --- 
error: unexpected unescaped control character `\u000B` in string literal
 --> stdin:1:3
  |
1 | ["␋a"\f]
  |   ^
  |
help: replace the control character with its escaped form
  |
1 | ["\u000Ba"\f]
  |   ++++++
