tests/snapshots/conformance__n_array_unclosed.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[""
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `]`, found no significant characters
 --> stdin:1:3
  |
1 | [""
  | - ^
  | |
  | expected due to `[`
  |
help: insert the missing closed delimiter `]`
  |
1 | [""]
  |    +
